[gd_scene load_steps=13 format=3 uid="uid://bqkmbet5kph2s"]

[ext_resource type="Script" uid="uid://dr4sog01mj4aa" path="res://ui/Menus/MainMenu/main_menu.gd" id="1_qq57v"]
[ext_resource type="Texture2D" uid="uid://iar0pqptjv1k" path="res://ui/Menus/MainMenu/background1.jpg" id="2_hjdud"]
[ext_resource type="Theme" uid="uid://coiuj78tsqptn" path="res://assets/Themes/label.tres" id="3_7f67a"]
[ext_resource type="Texture2D" uid="uid://bev3cwh8ycy45" path="res://ui/Menus/MainMenu/background2.jpg" id="4_saqqf"]
[ext_resource type="Texture2D" uid="uid://cs7383bschcn4" path="res://ui/Menus/MainMenu/backgrond3.jpg" id="5_rh0d7"]
[ext_resource type="Texture2D" uid="uid://bu7iogreo2020" path="res://ui/Menus/MainMenu/backgrond4.jpg" id="6_saqqf"]
[ext_resource type="Texture2D" uid="uid://do3hgpekdac8h" path="res://ui/Menus/MainMenu/button.png" id="7_odibn"]
[ext_resource type="Texture2D" uid="uid://dof7er8kr1dot" path="res://ui/Menus/MainMenu/1.png" id="8_ndrf2"]
[ext_resource type="Texture2D" uid="uid://cxhwe6q2k62gu" path="res://ui/Menus/MainMenu/2.png" id="9_pme0l"]
[ext_resource type="Texture2D" uid="uid://cyi3u8rqvwl28" path="res://ui/Menus/MainMenu/3.png" id="10_xqm4s"]

[sub_resource type="GDScript" id="GDScript_ndrf2"]
script/source = "extends TextureRect
"

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rh0d7"]
color = Color(0.497057, 0.000175437, 0.497053, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qq57v")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hjdud")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -196.0
offset_right = 114.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Play"

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "OPTIONS"

[node name="HelpBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Help"

[node name="CreditsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Credits"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7f67a")
text = "Quit"

[node name="HelpUI" type="TextureRect" parent="."]
visible = false
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_saqqf")
stretch_mode = 1

[node name="Button" type="Button" parent="HelpUI"]
layout_mode = 0
offset_left = 402.222
offset_top = 294.444
offset_right = 841.222
offset_bottom = 351.444
theme_override_font_sizes/font_size = 35
text = "Go to the helping website
"

[node name="HelpBackBtn" type="Button" parent="HelpUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.2222
offset_top = -51.1111
offset_right = 51.7778
offset_bottom = -13.1111
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_7f67a")
text = "Back"

[node name="CreditsUI" type="TextureRect" parent="."]
visible = false
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_rh0d7")
stretch_mode = 6

[node name="Label" type="Label" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -314.0
offset_right = 572.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7f67a")
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Made with <3 by

Mattia Torsello \"MattDirty\" - Developer & Liar
Matthieu Conti \"Mconti\" - Developer & Genius
Pascal Benoit \"pascal-nil\" - Developer & Dumb
AurÃ©lie Stephan \"histidiine\" - Scientist & Lost

Hugo Lefebvre \"Lumirevery\" - Game Designer
Julien Di Natale \"Avoltance\" - Game Designer & Developer
Louise \"ashisia\" - Developer
Miggeroo - Art
Piroporopi - Art
Shashamisen - Sound Design & Music
Thomas Rogulski \"Totoro\" - Game Designer & Developer


Credits to

Kenney - Font assets"

[node name="CreditsBackBtn" type="Button" parent="CreditsUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.7778
offset_top = -46.6667
offset_right = 38.2222
offset_bottom = -11.6667
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_7f67a")
text = "Back"

[node name="OptionsUI" type="TextureRect" parent="."]
visible = false
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("6_saqqf")
script = SubResource("GDScript_ndrf2")

[node name="Label" type="Label" parent="OptionsUI"]
layout_mode = 0
offset_left = 591.111
offset_top = 38.8889
offset_right = 723.111
offset_bottom = 125.889
theme_override_font_sizes/font_size = 30
text = "OPTIONS
"

[node name="slider1" type="HSlider" parent="OptionsUI"]
layout_mode = 0
offset_left = 524.444
offset_top = 167.778
offset_right = 1110.44
offset_bottom = 187.778
theme_override_icons/grabber = ExtResource("7_odibn")
theme_override_icons/grabber_highlight = ExtResource("7_odibn")
theme_override_styles/slider = SubResource("StyleBoxLine_rh0d7")
max_value = 10.0

[node name="slider2" type="HSlider" parent="OptionsUI"]
layout_mode = 0
offset_left = 522.222
offset_top = 280.0
offset_right = 1108.22
offset_bottom = 300.0
theme_override_icons/grabber = ExtResource("7_odibn")
theme_override_icons/grabber_highlight = ExtResource("7_odibn")
theme_override_styles/slider = SubResource("StyleBoxLine_rh0d7")
max_value = 10.0

[node name="slider3" type="HSlider" parent="OptionsUI"]
layout_mode = 0
offset_left = 522.222
offset_top = 397.778
offset_right = 1108.22
offset_bottom = 417.778
theme_override_icons/grabber = ExtResource("7_odibn")
theme_override_icons/grabber_highlight = ExtResource("7_odibn")
theme_override_styles/slider = SubResource("StyleBoxLine_rh0d7")
max_value = 10.0

[node name="OptionsBackBtn" type="Button" parent="OptionsUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.7778
offset_top = -46.6667
offset_right = 38.2222
offset_bottom = -11.6667
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_7f67a")
text = "Back"

[node name="text1" type="TextureRect" parent="OptionsUI"]
layout_mode = 0
offset_left = 67.7778
offset_top = 130.0
offset_right = 567.778
offset_bottom = 230.0
texture = ExtResource("8_ndrf2")

[node name="text2" type="TextureRect" parent="OptionsUI"]
layout_mode = 0
offset_left = 65.5556
offset_top = 243.333
offset_right = 565.556
offset_bottom = 343.333
texture = ExtResource("9_pme0l")

[node name="text3" type="TextureRect" parent="OptionsUI"]
layout_mode = 0
offset_left = 64.4445
offset_top = 362.222
offset_right = 564.444
offset_bottom = 462.222
texture = ExtResource("10_xqm4s")

[node name="value1" type="Label" parent="OptionsUI"]
layout_mode = 0
offset_left = 1134.44
offset_top = 153.333
offset_right = 1191.44
offset_bottom = 208.333
theme_override_font_sizes/font_size = 40
text = "0.0"

[node name="value2" type="Label" parent="OptionsUI"]
layout_mode = 0
offset_left = 1132.22
offset_top = 261.111
offset_right = 1189.22
offset_bottom = 316.111
theme_override_font_sizes/font_size = 40
text = "0.0"

[node name="value3" type="Label" parent="OptionsUI"]
layout_mode = 0
offset_left = 1131.11
offset_top = 373.333
offset_right = 1188.11
offset_bottom = 428.333
theme_override_font_sizes/font_size = 40
text = "0.0"

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpBtn" to="." method="_on_help_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsBtn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="HelpUI/Button" to="." method="_on_help_link_button_pressed"]
[connection signal="pressed" from="HelpUI/HelpBackBtn" to="." method="_on_help_back_btn_pressed"]
[connection signal="pressed" from="CreditsUI/CreditsBackBtn" to="." method="_on_credits_back_btn_pressed"]
[connection signal="value_changed" from="OptionsUI/slider1" to="." method="_on_slider_1_value_changed"]
[connection signal="value_changed" from="OptionsUI/slider2" to="." method="_on_slider_2_value_changed"]
[connection signal="value_changed" from="OptionsUI/slider3" to="." method="_on_slider_3_value_changed"]
[connection signal="pressed" from="OptionsUI/OptionsBackBtn" to="." method="_on_options_back_btn_pressed"]
